--- a/index.html
+++ b/index.html
@@ -6,13 +6,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Roman Portfolio</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Akaya+Telivigala&display=swap" rel="stylesheet">
 </head>
 <body>
-    <section>
-        <div>
+    <section class="flexible-container">
+        <div class=" part">
             <h1>WELCOME TO</h1>
-            <h1>Roman's World</h1>
+
+            <h1><span>Roman's</span> World</h1>
+
+            <h2>Build Climber and Train Stopper</h2>
+
+            <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work. That's why I am learning and mastering web development. I will not stop until I become the Web Development Hero.</p>
+            <a class="link-button" target="blank" href="https://www.facebook.com/profile.php?id=100010302872104">HIRE ME</a>
         </div>
+    <div class="part">
+        <img src="images/my pic3.png" >
+    </div>
+    </section>
+    <section class="flexible-container">
+        <h1></h1>
+
     </section>
     
 </body>
